<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParametersActivity">

    <LinearLayout
        android:id="@+id/parametersContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@drawable/shape_login_container"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewParametersFirstPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="23sp"
            android:text="@string/first_player_name" />

        <EditText
            android:id="@+id/editTextParametersFirstPlayerName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/first_player_hint" />

        <TextView
            android:id="@+id/textViewParametersSecondPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="23sp"
            android:text="@string/second_player_name" />

        <EditText
            android:id="@+id/editTextParametersSecondPlayerName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/second_player_hint" />

        <TextView
            android:id="@+id/textViewParametersFieldSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="23sp"
            android:text="@string/field_size" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radioButton"
                android:theme="@style/MyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:textSize="25sp"
                android:shadowColor="@color/black"
                android:checked="true"
                android:text="@string/_3x3" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:theme="@style/MyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:textSize="25sp"
                android:text="@string/_4x4" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="130dp"
        android:background="@drawable/shape_button"
        android:textColor="@color/white"
        android:text="@string/start_game"
        app:layout_constraintTop_toBottomOf="@id/parametersContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>